==> mhanuel26/W7500x-Surf5/src/max7219.c <==
#include <stdio.h>
#include <string.h>
#include <unistd.h>
#include <stdint.h>
#include "w7500x_ssp.h"
#include "max7219.h"
#include <assert.h>

void maxSendSequence(uint8_t *pSequence, uint8_t len)
{
  // The CS line stays low throughout a "transaction". Send all of the control uint8_ts for all of the chained
  // controllers in a single transaction. When the CS line rises, the data will be latched
//    AIOWriteGPIO(iCSPin, 0);
//    AIOWriteSPI(file_spi, pSequence, len);
//    AIOWriteGPIO(iCSPin, 1);

	FlagStatus ssp0_tx_empty;
	GPIO_ResetBits(GPIOA, iCSPin); // Set the SSEL pin to LOW
	uint16_t data;
	for(uint8_t j=0; j<len/2; j++){
		data = (*pSequence++ << 8);
		data |= *pSequence++;
		SSP_SendData(SSPx, data);                   //Master Data Send
	}
	while(1){
		ssp0_tx_empty = SSP_GetFlagStatus(SSPx, SSP_SR_BSY);
		if(ssp0_tx_empty == RESET){
			break;
		}
	}
	GPIO_SetBits(GPIOA, iCSPin);   // Set the SSEL pin to HIGH
}

int maxInit(uint8_t iNum, uint8_t bDecodeMode, uint8_t iChannel, uint8_t iSelect)
{
	assert((iChannel == 0) ||  (iChannel == 1));
	if(iChannel == 0)
		SSPx = SSP0;
	else
		SSPx = SSP1;
	SSPx_Master_Init();
	iNumControllers = iNum;
	iCSPin = GPIO_Pin_5;

	GPIO_InitTypeDef GPIO_InitStruct;

	// Configure the port and pin number connected to the SSEL pin
	GPIO_InitStruct.GPIO_Pin = iCSPin;  // X is the SSEL pin number
	GPIO_InitStruct.GPIO_Direction = GPIO_Direction_OUT;
	GPIO_InitStruct.GPIO_Pad = GPIO_PuPd_UP;
	GPIO_InitStruct.GPIO_AF =  PAD_AF0;

	GPIO_Init(GPIOA, &GPIO_InitStruct);  // GPIOX is the port to which the SSEL pin belongs.
	GPIO_SetBits(GPIOA, iCSPin);   // Set the SSEL pin to HIGH

	maxPowerUp(1); // turn on the LED controllers
	maxSetLimit(8); // tell it to display 8 rows of 8 pixels
	maxSetIntensity(0); // set the minimum intensity to start (1/32 duty cycle)
	maxSetSegmentMode(bDecodeMode); // sets BCD (7-segment), or none (pixels
	maxSetTestMode(0); // disable test mode (it can accidentally get set at power up) 
	return 0;
}
